force-app/main/default/objects/Resource__c/fields/Content_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Id__c</fullName>
    <description>Field to store linked Content Document&apos;s Id for internal usage.</description>
    <label>Content Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>