force-app/main/default/objects/Resource__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field to hold resource&apos;s description.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>