force-app/main/default/objects/Resource__c/fields/File_Linked__c.field-meta.xml
<CustomField>
    <fullName>File_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify if file is linked.</description>
    <label>File Linked</label>
    <type>Checkbox</type>
</CustomField>