force-app/main/default/objects/Resource__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Field to store linked file&apos;s name.</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>